oxiplate-derive/tests/broken/derive/derive-on-function.rs
use oxiplate_derive::Oxiplate;

#[derive(Oxiplate)]
#[oxiplate_inline(html: "")]
fn main() {}
